--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ body {
 
 #home-img {
     max-height: 100%;
-    max-width: 90% ;
+    max-width: 90%;
     margin-right: auto;
     display: block;
     z-index: 400;
@@ -210,6 +210,8 @@ figcaption a:hover {
     opacity: 0.85;
     margin-right: 0.5em;
     padding: 0;
+    rotate: -1deg;
+    box-shadow: -10px 10px 20px rgba(4, 4, 4, 0.3);
     z-index: 100;
 }
 
@@ -220,6 +222,8 @@ figcaption a:hover {
     opacity: 0.8;
     margin-left: 0.3em;
     padding: 0;
+    rotate: 1deg;
+    box-shadow: 10px 10px 20px rgba(4, 4, 4, 0.3);
     z-index: 100;
 }
 
@@ -230,6 +234,8 @@ figcaption a:hover {
     height: auto;
     opacity: 0.8;
     padding: 0;
+    rotate: -2deg;
+    box-shadow: -10px 10px 20px rgba(4, 4, 4, 0.4);
     z-index: 100;
 }
 
@@ -482,10 +488,18 @@ figcaption a:hover {
         visibility: visible;
     }
 
+    .select-menu .select-btn {
+        height: 8vh;
+    }
+
     .main-text {
         margin-left: 6vw;
         margin-right: 4vw;
-        margin-top: 180px;
+        margin-top: 190px;
+    }
+
+    #index_figure img {
+        width: 110%;
     }
 
     #bio_pic {
