--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,9 @@ body {
     overflow-y: scroll;
     box-sizing: border-box;
 }
+#wrapper.dropdown-active {
+    overflow-y: unset;
+}
 
 .heading {
     background-color: rgba(193, 198, 214, 1.0);
@@ -203,42 +206,6 @@ figcaption a:hover {
     margin-bottom: .2em;
 }
 
-/*#services_img01 {
-    float: left;
-    width: 40%;
-    height: auto;
-    opacity: 0.85;
-    margin-right: 0.5em;
-    padding: 0;
-    rotate: -1deg;
-    box-shadow: -10px 10px 20px rgba(4, 4, 4, 0.3);
-    z-index: 100;
-}
-
-#services_img02 {
-    float: right;
-    width: 40%;
-    height: auto;
-    opacity: 0.8;
-    margin-left: 0.3em;
-    padding: 0;
-    rotate: 1deg;
-    box-shadow: 10px 10px 20px rgba(4, 4, 4, 0.3);
-    z-index: 100;
-}
-
-#services_img03 {
-    width: 50%;
-    float: left;
-    margin-right: 0.3em;
-    height: auto;
-    opacity: 0.8;
-    padding: 0;
-    rotate: -2deg;
-    box-shadow: -10px 10px 20px rgba(4, 4, 4, 0.4);
-    z-index: 100;
-}*/
-
 .fees_headers {
     color: #5f88a0;
     font-size: 1.2em;
@@ -329,7 +296,6 @@ figcaption a:hover {
   position: absolute;
   visibility: hidden;
   width: 80vw;
-  overflow-y: auto;
   max-height: 90vh;
   padding: 10px;
   margin-top: 10px;
@@ -377,16 +343,25 @@ figcaption a:hover {
   transform: rotate(-180deg);
 }
 .select-menu.active .options {
-    visibility: visible;
+  visibility: visible;
   display: block;
   opacity: 0;
   z-index: 900;
+  overflow-y: scroll;
   animation-name: fadeInUp;
   -webkit-animation-name: fadeInUp;
   animation-duration: 0.4s;
   animation-fill-mode: both;
   -webkit-animation-duration: 0.4s;
   -webkit-animation-fill-mode: both;
+}
+.disable_scrollbar::-webkit-scrollbar {
+  background: transparent; /* Chrome/Safari/Webkit */
+  width: 0px;
+}
+.disable_scrollbar {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE 10+ */
 }
 
 @keyframes fadeInUp {
@@ -466,14 +441,6 @@ figcaption a:hover {
 
 }
 
-/*@media (max-width: 1000px) {
-
-    #services_img01, #services_img02, #services_img03 {
-        display: none;
-    }
-}*/
-
-
 @media (max-width: 800px) {
 
     .heading {
@@ -525,5 +492,11 @@ figcaption a:hover {
         margin-top: -0.07em;
         margin-right: 0.07em;
         margin-bottom: -0.1em;
+    }
+}
+
+@media (max-height: 620px) {
+    .select-menu .options {
+        height: 60vh;
     }
 }
